# signals

./: README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
contract/: Cargo.toml  README.md
contract/src/: contract.rs  lib.rs  service.rs  state.rs
src/: App.tsx  index.css
src/components/: BettingPanel.tsx  Game.tsx  GameView.tsx  Header.tsx  LandingPage.tsx  MarketView.tsx  PriceCanvas.tsx  PriceScale.tsx  Timeline.tsx  WalletCreated.tsx  WalletCreationProgress.tsx  WalletSetup.tsx
src/config/: contract.ts
src/hooks/: useAnimationFrame.ts  useLiveTime.ts  useMarket.ts  usePriceScale.ts  useWallet.ts
src/store/: walletStore.ts
src/types/: index.ts
src/utils/: bettingHistory.ts  btcPrice.ts  deployContract.ts  linera.ts  lineraClient.ts  wallet.ts
